# MailTaskClient

./: .gitignore  .travis.yml  CMakeLists.txt
project/: main.cpp
project/UI/: ui.cpp  ui.h
project/tests/: CMakeLists.txt  test.cpp
